Update .gitignore with additional exclusion patterns
add new patterns to exclude files

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,20 @@
-/.phpunit.cache
 /node_modules
 /public/build
 /public/hot
 /public/storage
 /storage/*.key
-/storage/pail
+/storage/framework/cache/data/*
+/storage/framework/sessions/*
+/storage/framework/testing/*
+/storage/framework/views/*
+/storage/logs/*
 /vendor
 .env
 .env.backup
 .env.production
 .phpactor.json
 .phpunit.result.cache
+/.phpunit.cache
 Homestead.json
 Homestead.yaml
 npm-debug.log
@@ -18,6 +22,9 @@ yarn-error.log
 /auth.json
 /.fleet
 /.idea
-/.nova
 /.vscode
 /.zed
+.DS_Store
+Thumbs.db
+/database/*.sqlite
+/database/*.sqlite-journal
