--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@inertiajs/vue3": "^2.3.14",
         "@tailwindcss/vite": "^4.0.0",
+        "@vitejs/plugin-vue": "^6.0.4",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^4.0.0",
-        "vite": "^6.2.4"
+        "vite": "^6.2.4",
+        "vue": "^3.5.28"
+    },
+    "dependencies": {
+        "ziggy-js": "^2.6.0"
     }
 }
